both: create user and refactor admin panel
